force-app/main/default/objects/EmailMessage/fields/Exchange_message_ID__c.field-meta.xml
<CustomField>
    <fullName>Exchange_message_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used to prevent duplicate message creation by Riva</description>
    <externalId>true</externalId>
    <inlineHelpText>Used to prevent duplicate message creation by Riva</inlineHelpText>
    <label>Exchange message ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>